--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@
             <hr>
         </section>
 
+        <section>
+
+            <h3>Cose da fare</h3>
+
+            <ul>
+                <li>Visitare la Tower of London &#10006;;</li>
+                <li>Visitare Greenwich &#10004;</li>
+                <li>Ascoltare un artista di strada a Covenrt Garden &#10004;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#10006;</li>
+            </ul>
+
+            <hr>
+
+        </section>
+
 
 
     </main>
