--- a/index.html
+++ b/index.html
@@ -74,6 +74,47 @@
 
         </section>
 
+        <section>
+
+            <h3>Info utili:</h3>
+
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999-</strong> Emergenza</li>
+                        <li><strong>101-</strong> Numero polizia</li>
+                        <li><strong>111-</strong> Numero assistenza medica</li>
+                    </ul>
+                </li>
+            </ol>
+
+            <ol>
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+            </ol>
+
+            <ol>
+                <li>
+                    Aereo
+                    <ul>
+                        <li><strong>Volo di andata:</strong> Y1234X, ore 9:30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno:</strong> Y1236, ore 18:30 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+
+
+
+
+
+        </section>
+
 
 
     </main>
